# HomeWorkAdv-4-2

./: CMakeLists.txt  HomeWorkAdv-4-2.cpp  List.cpp  List.h  ListNode.cpp  ListNode.h  README.md
